--- a/web/css/survey.css
+++ b/web/css/survey.css
@@ -61,8 +61,9 @@
 #surveyContainer {
     font-size: 13px;
     width: 412px;
+    height: 87%;
     position: absolute;
-    top: 8vh;
+    top: 5vh;
     right: 10px;
     z-index: 1000000;
     border: 1px solid #f0f0f0;
